[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/3d/psx_cars/Car 05/car5_police_la.png" type="Texture" id=1]
[ext_resource path="res://assets/3d/psx_cars/Car 05/Car5_Police.obj" type="ArrayMesh" id=2]
[ext_resource path="res://shaders/car.tres" type="Material" id=3]
[ext_resource path="res://scripts/interactables/cop-car-rigid.gd" type="Script" id=4]
[ext_resource path="res://fire1.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/explode.ogg" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=6]
rough = true

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 1, 3 )

[node name="cop_car" type="Spatial"]

[node name="RigidBody" type="RigidBody" parent="." groups=["Interactable"]]
collision_layer = 3
physics_material_override = SubResource( 6 )
can_sleep = false
linear_damp = 0.2
angular_damp = 0.2
script = ExtResource( 4 )

[node name="Car5_Police" type="MeshInstance" parent="RigidBody"]
material_overlay = ExtResource( 3 )
mesh = ExtResource( 2 )
skeleton = NodePath("../..")
material/0 = SubResource( 1 )

[node name="fire1" parent="RigidBody" instance=ExtResource( 5 )]
transform = Transform( 3.86346, 0.00945089, -3.17389, -0.271766, 4.9826, -0.315974, 3.16225, 0.416662, 3.85053, 0, 2.46111, 2.35897 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 4 )

[node name="explodeSound" type="AudioStreamPlayer" parent="RigidBody"]
stream = ExtResource( 6 )
